@@ -235,6 +235,7 @@ i18n / Languages:
 * Separated MessagesSl.php as the other languages.
 * (bug 4960) Add additional namespaces variants to Yiddish for compatibility
 * (bug 4805) Removed more wikipedia-references from MessagesUk.php
+* (bug 5015) Update magic words translation in LanguageBe.php
 
 Parser:
 * (bug 2522) {{CURRENTDAY2}} now shows the current day number with two digits
